--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 
-spring.datasource.url=jdbc:h2:mem:spiltwisedb
+spring.datasource.url=jdbc:h2:mem:splitwisedb
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.defer-datasource-initialization=true
 spring.h2.console.enabled=true
-spring.jpa.generate-ddl=true
+spring.h2.console.path=/h2-console
+spring.datasource.username=sa
+spring.datasource.password=sa
 spring.jpa.hibernate.ddl-auto=create-drop
+
